LATEST VERSION
-----------------------------
- filter kantPersNr
- report wrong xml file format as error